# goat_shape_estimation

./: .gitignore  Dockerfile  DockerfileCpu  DockerfileGpu  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/goat_shape_estimation/: goat_shape_estimation.py  graphs.py  resample_rosbag.py  tester.py  visualize_spline.py
src/goat_shape_estimation/helpers/: data_loader.py  data_processer.py  dataset.py  model.py  noise.py  visualizer.py  wrapper.py
src/goat_shape_estimation/helpers/visualization/: visualizer.py
