[project]
name = "rosbag-lstm"
version = "0.1.0"
description = "LSTM model training using ROS1/ROS2 bag files"
authors = [
    {name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/goodfaiter/goat_shape_estimation"

[tool.setuptools]
packages = ["helpers"]

[project.dependencies]
numpy = ">=2.1.2"
pandas = ">=2.2.3"
scikit-learn = ">=1.6.1"
torch = ">=2.5.1+cpu"
matplotlib = ">=3.10.3"
tqdm = ">=4.67.1"
rosbags = ">=0.10.10"